Made some whitespace changes for small screens and up and fixed an issue where I wasn't preloading the correct image.

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,12 +1,31 @@
 /* On Every Page */
+@media (min-width: 768px) {
+  body {
+    margin: 75px 100px 20px 100px;
+  }
+}
+
+.navbar .navbar-form{
+    padding: 0 15px;
+    border: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
 .sidebar {
     padding: 15px;
     border-radius: 4px;
     line-height: 1.5em;
+    margin: 0 -15px 15px;
 }
 
 .sidebar-module {
     background-color: #f5f5f5;
+}
+
+.xs-img {
+    width: 100%;
+    max-width: 200px;
 }
 
 .tag {
@@ -24,14 +43,6 @@
 /* resume.html */
 .padding-fix {
     padding:10px;
-}
-
-.markdown-hover:hover {
-    content: url('/resources/images/contact/markdown-selected.png');
-}
-
-.pdf-hover:hover {
-    content: url('/resources/images/contact/pdf-selected.png');
 }
 
 /* contact.html */
